Adding the random Filter and the ranom Value

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
 
 
     <script id="message-template" type="template">
-        <img src={{firstItemImage}} style="filter: brightness({{theChosenStyling}}%);"/>
+        <p>{{title}}</p>
+        <img src={{url}} style="filter: {{randomFilter}}({{randomValue}}%)"/>
+        <p>filter: {{randomFilter}}({{randomValue}}%)</p>
     </script>
 
 
