--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,16 @@
 
 <body class="main_page">
 
-  <div id="target">Loading...</div>
+
+  <section class="embed_last_tweet">
+
+    <blockquote class="twitter-tweet" data-lang="fr"><p lang="en" dir="ltr"><a href="https://t.co/W6ZX8jUs2E">https://t.co/W6ZX8jUs2E</a> - “The Bianco” Breaded Chicken Breast with Mushroom Cream Sauce on Fettuccine. [OC] [2448x2448] - 140,0,632,0,0,140,1522212918,822008,1522184118,632,10</p>&mdash; f__a (@food_analytics) <a href="https://twitter.com/food_analytics/status/979115978033369090?ref_src=twsrc%5Etfw">28 mars 2018</a></blockquote>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
+
+
+  </section>
 
     <script id="message-template" type="template">
         <p>{{title}}</p>
