Refactoring the code

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,8 @@
 
   <section class="embed_last_tweet">
 
-    <blockquote class="twitter-tweet" data-lang="fr"><p lang="en" dir="ltr"><a href="https://t.co/W6ZX8jUs2E">https://t.co/W6ZX8jUs2E</a> - “The Bianco” Breaded Chicken Breast with Mushroom Cream Sauce on Fettuccine. [OC] [2448x2448] - 140,0,632,0,0,140,1522212918,822008,1522184118,632,10</p>&mdash; f__a (@food_analytics) <a href="https://twitter.com/food_analytics/status/979115978033369090?ref_src=twsrc%5Etfw">28 mars 2018</a></blockquote>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-
-
+    <blockquote class="twitter-tweet" data-lang="fr"><p lang="en" dir="ltr"><a href="https://t.co/Kp4UexQxiV">https://t.co/Kp4UexQxiV</a> - New York style pastrami, smoked and steamed until tender [640 x 800] [GIF] - 140,0,3280,0,0,140,1522359753,823356,1522330953,3280,145 <a href="https://t.co/e2OMmMvYep">pic.twitter.com/e2OMmMvYep</a></p>&mdash; f__a (@food_analytics) <a href="https://twitter.com/food_analytics/status/979464874383368193?ref_src=twsrc%5Etfw">29 mars 2018</a></blockquote>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
   </section>
 
