--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,14 @@
 
 <body class="main_page">
 
-  <!-- <section class="embed_last_tweet">
+  <section class="embed_last_tweet">
 
-    <blockquote class="twitter-tweet" data-lang="fr"><p lang="en" dir="ltr"><a href="https://t.co/Kp4UexQxiV">https://t.co/Kp4UexQxiV</a> - New York style pastrami, smoked and steamed until tender [640 x 800] [GIF] - 140,0,3280,0,0,140,1522359753,823356,1522330953,3280,145 <a href="https://t.co/e2OMmMvYep">pic.twitter.com/e2OMmMvYep</a></p>&mdash; f__a (@food_analytics) <a href="https://twitter.com/food_analytics/status/979464874383368193?ref_src=twsrc%5Etfw">29 mars 2018</a></blockquote>
+
+    <blockquote class="twitter-tweet" data-lang="fr"><p lang="en" dir="ltr"><a href="https://t.co/tXExTK8zml">https://t.co/tXExTK8zml</a> - Spicy Firecracker Chicken [OC] [4032x3024] - 140,0,12,0,0,105,1522382610,823833,1522353810,12,1 <a href="https://t.co/INDkLGEYtq">pic.twitter.com/INDkLGEYtq</a></p>&mdash; f__a (@food_analytics) <a href="https://twitter.com/food_analytics/status/979543736223924224?ref_src=twsrc%5Etfw">30 mars 2018</a></blockquote>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-  </section> -->
+
+  </section>
 
     <script id="message-template" type="template">
         <p>{{title}}</p>
