re_writing this bot

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>express styling</title>
+    <title>f__a</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -11,12 +11,7 @@
 <body class="main_page">
 
   <section class="embed_last_tweet">
-
-
-    <blockquote class="twitter-tweet" data-lang="fr"><p lang="en" dir="ltr"><a href="https://t.co/tXExTK8zml">https://t.co/tXExTK8zml</a> - Spicy Firecracker Chicken [OC] [4032x3024] - 140,0,12,0,0,105,1522382610,823833,1522353810,12,1 <a href="https://t.co/INDkLGEYtq">pic.twitter.com/INDkLGEYtq</a></p>&mdash; f__a (@food_analytics) <a href="https://twitter.com/food_analytics/status/979543736223924224?ref_src=twsrc%5Etfw">30 mars 2018</a></blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-
+      <p>...please refresh the page...</p>  
   </section>
 
     <script id="message-template" type="template">
